change repo location

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "numeral",
-  "repo": "adamwdraper/Numeral-js",
+  "repo": "atomlipetsk/Numeral-js",
   "version": "1.5.3",
   "description": "Format and manipulate numbers.",
   "keywords": [
