--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "homepage": "http://numeraljs.com",
   "author": {
     "name": "Adam Draper",
-    "email": "adamwdraper@gmail.com",
-    "url": "http://github.com/adamwdraper"
+    "email": "atom.lipetsk@gmail.com",
+    "url": "http://github.com/atomlipetsk"
   },
   "keywords": [
     "numeral",
@@ -22,10 +22,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/adamwdraper/Numeral-js"
+    "url": "https://github.com/atomlipetsk/Numeral-js"
   },
   "bugs": {
-    "url": "https://github.com/adamwdraper/Numeral-js/issues"
+    "url": "https://github.com/atomlipetsk/Numeral-js/issues"
   },
   "licenses": [
     {
